<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="theme">Theme of application</string>
    <string name="nightmode">Turn on night mode</string>
    <string name="language">Language of the application</string>
    <string name="eventadviser">Event Adviser</string>
    <string name="adviser">Turn on adviser</string>
    <string name="days">Days before the advise</string>
    <string name="restart">Reset to default settings</string>
    <string name="savechanges">Save changes</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="street">Street</string>
    <string name="description">Description</string>
    <string name="datestart">Date start</string>
    <string name="datend">Date end</string>
    <string name="save">Save</string>
    <string name="setphoto">Set photos</string>
    <string name="join">Join</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="singin">Sing in</string>
    <string name="singup">Sing up</string>
    <string name="noevents">No event has been created yet. Why dont you try creating one?</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="emailjoin">Show my email when join a event</string>
    <string name="emailcomments">Show my email in the comments</string>
    <string name="profile">Profile</string>
    <string name="showcomments">Activate Comments</string>
    <string name="privacity">Privacity</string>
    <string name="changephoto">Change photo</string>
    <string name="appearance">Appearance</string>
    <string-array name="languagues">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
    </string-array>
    <string name="restartapp">You need to restart the app to apply the changes</string>
    <string name="newevent">Newest Event</string>
    <string name="searchtittle">Search</string>
    <string name="myevents">My Events</string>
    <string name="settings">Setings</string>
    <string name="details">Details Of the event</string>
    <string name="eventcreation">Event creation</string>
    <string name="comments">Comments</string>
    <string name="savecomment">Save Comment</string>
    <string name="joined">People that joined: </string>
    <string name="joinedFragment">Joined</string>
    <string name="no_events_signed_up">You haven’t signed up for any events yet — why not give it a try?</string>
</resources>