<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Fragments.DetallesFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <View
                    android:layout_width="200dp"
                    android:layout_height="31dp" />

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="19dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/city"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/ciudad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="21dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/street"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/calle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/descripcion"
                    android:layout_width="306dp"
                    android:layout_height="206dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="14dp" />

                <TextView
                    android:id="@+id/texto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/fecha_limite"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="14dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="14dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerFotos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/genteapuntada"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/joined"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/apuntarse"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:text="@string/join"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/aniadirFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:text="@string/setphoto"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/botoncomentario"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:text="@string/comments"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutComentario"
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/comentario"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/comments" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/guardarcomentario"
                    android:layout_width="152dp"
                    android:layout_height="43dp"
                    android:layout_gravity="center"
                    android:text="@string/savecomment"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerComentario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />

            </LinearLayout>
        </android.widget.ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
